--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,5 +3,5 @@
   <title>Artistry</title>
   <meta name="description" content="Generative Visualisation" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/assets/styles.css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles.css" />
 </head>
