--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,4 +12,6 @@
   <style>
     {{ highlight | scssify }}
   </style>
+
+  <script type="text/javascript" src="{{ site.baseurl }}/assets/artistry.js"></script>
 </head>
