--- a/_layouts/sketch.html
+++ b/_layouts/sketch.html
@@ -4,7 +4,7 @@
   <body>
     <main>
       <h1>{{page.title}}</h1>
-      <canvas id="sketch"></canvas>
+      <canvas id="sketch" width="320" height="320"></canvas>
       <section id="code">
         {{ content }}
       </section>
