Basic vis library

--- a/_includes/github.css
+++ b/_includes/github.css
@@ -1,3 +1,7 @@
+/* Github.css 
+https://github.com/jwarby/jekyll-pygments-themes/blob/master/github.css
+*/
+
 .highlight .hll {
   background-color: #ffffcc;
 }
